--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,22 @@
-.App {
+ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+li {
+  margin: 0;
+  flex: 1 0 33%;
+  cursor: pointer;
+  outline: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+a {
+  text-decoration: none;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.active {
+  color: green;
+  border-bottom: 1px solid green;
 }
